pom adaptions and pmd warnings eradicated